--- a/index.html
+++ b/index.html
@@ -7,8 +7,7 @@
     <title>Домашняя работа №1</title>
   </head>
   <body>
-    <h1>Трилогия «Властелин Колец»</h1>
-    <p>
+      <p>
       Трилогия <em>«Властелин Колец»</em> бесспорно возглавляет список
       «культовых» книг XX века. Ее автор, <em>Дж.Р.Р.Толкин</em>, профессор
       Оксфордского университета, специалист по древнему и средневековому
@@ -30,7 +29,7 @@
       битве, о том, как Хранитель выполнил свою миссию и как погибло царство
       Саурона.
     </p>
-    <h2>Книга Пятая</h2>
+    <h1>Книга Пятая</h1>
     <nav class="nav">
       <ul>
         <li><a href="#Глава_1">Глава 1 Минас Тирит</a></li>
@@ -58,7 +57,7 @@
     <a name="Глава_1"></a>
     <h2>Глава 1 Минас Тирит</h2>
     <img
-      src="../HomeWork-1/минас_тирит.jpg"
+      src="../HomeWork-1/img/минас_тирит.jpg"
       alt="сдесь должна быть картинка"
       title="Минас Тирит"
     />
@@ -101,7 +100,7 @@
     <a name="Глава_2"></a>
     <h2>Глава 2 Выбор Арагорна</h2>
     <img
-      src="../HomeWork-1/выбор_арагорна.png"
+      src="../HomeWork-1/img/выбор арагорна.png"
       alt="сдесь должна быть картинка"
       title="Арагорн - король Гондора"
     />
@@ -148,7 +147,7 @@
     <a name="Глава_3"></a>
     <h2>Глава 3 Рохан собирает войска</h2>
     <img
-      src="../HomeWork-1/Рохан_собирает_войска.jpg"
+      src="../HomeWork-1/img/Рохан собирает_войска.jpg"
       alt="сдесь должна быть картинка"
       title="Войско Рохана"
     />
@@ -187,7 +186,7 @@
     <a name="Глава_4"></a>
     <h2>Глава 4 Осада Города</h2>
     <img
-      src="../HomeWork-1/Осада_города.jpg"
+      src="../HomeWork-1/img/Осада города.jpg"
       alt="сдесь должна быть картинка"
       title="Осада города"
     />
@@ -242,7 +241,7 @@
     <a name="Глава_5"></a>
     <h2>Глава 5 Поход Теодена</h2>
     <img
-      src="../HomeWork-1/Поход_Теодена.jpg"
+      src="../HomeWork-1/img/Поход Теодена.jpg"
       alt="сдесь должна быть картинка"
       title="поход Теодена"
     />
