--- a/index.html
+++ b/index.html
@@ -147,7 +147,7 @@
     <a name="Глава_3"></a>
     <h2>Глава 3 Рохан собирает войска</h2>
     <img
-      src="../HomeWork-1/img/Рохан собирает_войска.jpg"
+      src="../HomeWork-1/img/Рохан собирает войска.jpg"
       alt="сдесь должна быть картинка"
       title="Войско Рохана"
     />
