--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   </head>
   <body>
       <p>
-      Трилогия <em>«Властелин Колец»</em> бесспорно возглавляет список
+      Трилогия <cite>«Властелин Колец»</cite> бесспорно возглавляет список
       «культовых» книг XX века. Ее автор, <em>Дж.Р.Р.Толкин</em>, профессор
       Оксфордского университета, специалист по древнему и средневековому
       английскому языку, создал удивительный мир - Среднеземье, который вот уже
